# RSNA_breast_cancer_detection

./: .gitignore  README.md  pyproject.toml  train.csv.dvc
data/: dicom.dvc  train_images_processed_cv2_dicomsdl_256.dvc
src/: data.py  image_dataset.py  main.py  model.py  train.py  utils.py
src/analyse/: preprocess.py
src/data/: image_dataset.py  utils.py
src/model/: loss.py  model.py
