[tool.poetry]
name = "rsna_breast_cancer_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.38.1"
dicomsdl = "^0.109.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
scikit-image = "^0.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
