[tool.poetry]
name = "rsna-breast-cancer-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rsna_breast_cancer_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
pandas = "^1.5.3"
torchvision = "^0.14.1"
opencv-python = "^4.7.0.68"
dicomsdl = "^0.109.1"
pydicom = "^2.3.1"
timm = "^0.6.12"
efficientnet-pytorch = "^0.7.1"
pytorch-lightning = "^1.9.1"
exhaustive-weighted-random-sampler = "^0.0.2"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
